--- a/IA_Fundamentals_NQueensProblem_BrajanNieto.ipynb
+++ b/IA_Fundamentals_NQueensProblem_BrajanNieto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWI111sxeJeJdd6sjr8GRh",
+      "authorship_tag": "ABX9TyMBpV0orW+BYkOv2m+taOdu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,15 +39,9 @@
         "\n",
         "### Application of Hill Climbing and Simulated Annealing in the N-Queens Problem\n",
         "\n",
-        "**Professor:**  \n",
-        "Mg. Machaca Vicente Arceda  \n",
-        "[vicente.machaca.a@gmail.com](mailto:jcaballero@utec.edu.pe)\n",
-        "\n",
-        "**Autor:**  \n",
+        "**Author:**  \n",
         "Bach. Brajan Esteban Nieto Espinoza  \n",
         "[brajan.nieto@utec.edu.pe](mailto:brajan.nieto@utec.edu.pe)\n",
-        "\n",
-        "<img src=\"https://pregrado.utec.edu.pe/sites/default/files/logo-utec-h_0_0.svg\" width=\"190\" alt=\"Logo UTEC\" loading=\"lazy\" typeof=\"foaf:Image\">\n",
         "\n",
         "---\n"
       ],
@@ -107,7 +101,7 @@
       "metadata": {
         "id": "xL4L1bggFZZD"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +144,7 @@
       "metadata": {
         "id": "RxvwqFkaGxqI"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +185,7 @@
       "metadata": {
         "id": "yDN2oOg5WUL1"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +229,7 @@
       "metadata": {
         "id": "ENQ1oa3p85pO"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -569,7 +563,7 @@
       "metadata": {
         "id": "PMobWYlckXl8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -643,7 +637,7 @@
       "metadata": {
         "id": "QlTlvreFbZDv"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -758,7 +752,7 @@
       "metadata": {
         "id": "hPdDFmGUlfxv"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -887,7 +881,7 @@
       "metadata": {
         "id": "gqmIdVaLmy1e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1661,7 +1655,7 @@
         "id": "7DdkuGafu0mt",
         "outputId": "09b47f64-3871-4256-b617-1189ab9a3774"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1959,7 +1953,7 @@
         "id": "iwGfAL6eCthL",
         "outputId": "a9f0b21f-57a0-458d-97d8-0e132aff1b4c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2002,7 +1996,7 @@
         "id": "KKiqqYeaGmCh",
         "outputId": "82d888ae-165e-4406-81a9-7f7382094524"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2040,7 +2034,7 @@
         "id": "pOjFWSoyGp6r",
         "outputId": "f9ba22e3-fb10-4613-b052-91e57e916730"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
